# svg_tools

./: .coveragerc  .dockerignore  .env.audio_to_text.example  .env.audio_to_text_backend.example  .env.audio_to_text_grpc.example  .env.audio_to_text_ui.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  audio_to_text.py  audio_to_text_backend.py  audio_to_text_grpc.py  generate_color_gradient.py  render_text_video.py  sitecustomize.py
audio_to_text_backend/: __init__.py  server.py
audio_to_text_grpc/: __init__.py  audio_to_text_grpc_pb2.py  audio_to_text_grpc_pb2_grpc.py  server.py
audio_to_text_ui/: config.js  index.html
docker/: docker-compose.yml
domain/: __init__.py  text_video.py
issues.md/: AGENTS.DOCKER.md  AGENTS.FRONTEND.md  AGENTS.GIT.md  AGENTS.GO.md  AGENTS.PY.md  ISSUES.md  (+3 more)
reel/: .coveragerc  .env.backend.example  .env.grpc.example  .gitignore  Makefile  __init__.py  backend_server.py  grpc_server.py  pyproject.toml  render_text_video.py
reel/audio_grpc/: audio_to_text_pb2_grpc.py  server.py
reel/backend/: __init__.py  server.py
reel/docker/: docker-compose.yml
reel/docker/backend/: Dockerfile  Dockerfile.dev
reel/docker/grpc/: Dockerfile  Dockerfile.dev  entrypoint.sh
reel/docker/ui/: Dockerfile  entrypoint.sh
reel/domain/: __init__.py
reel/grpc/: __init__.py  server.py
reel/service/: render_plan.py
reel/tests/: __init__.py  test_audio_to_text.py  test_audio_to_text_backend.py  test_audio_to_text_grpc.py  test_render_text_video.py
reel/ui/js/: constants.js
reel/ui/js/utils/: logging.js
(+26 files in other folders)
